# archie-backend

./: .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  api_controller.py  database.py  docker-compose.yml  endpoints.py  main.py  pyproject.toml  redis_client.py  utils.py
alembic/: env.py
alembic/versions/: 4a6ebffe0f74_.py  4a6ebffe0f74_add_llm_trace_field.py  a4ae314ae9b0_add_title_field_to_conversations.py  a82e90ba7b8a_initial_clean_migration.py  d3bd9f810a99_update_lllmtrace_model_structure_with_.py  ef869ff1cc3e_create_conversations_and_messages_tables.py
app/: backend.py  models.py
